kubernetes/apps/k8s/monitoring/loki/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "loki.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: loki-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "loki.${DOMAIN}"
